# 2026-Clothoid-R-Perception

./: .gitignore  2026_pipeline.drawio  Frame Rate.txt  README.md  environment.yml  pipeline_optimization.md
docker/: Dockerfile.perception
src/: README.md
src/detect_msgs/: CMakeLists.txt
src/livox_camera_fusion/: CMakeLists.txt  README.md  package.xml
src/livox_camera_fusion/config/: projection.yaml
src/livox_camera_fusion/include/: livox_camera_fusion.h
src/livox_camera_fusion/launch/: livox_camera_fusion.launch
src/livox_camera_fusion/src/: livox_camera_fusion.cpp  main.cpp
src/livox_clustering/: CMakeLists.txt  README.md  package.xml
src/livox_clustering/config/: livox_clustering.yaml
src/livox_clustering/launch/: livox_clustering.launch
src/livox_clustering/scripts/: livox_euclidean_clustering.py
src/perception_bringup/: CMakeLists.txt  README.md  package.xml
src/perception_bringup/launch/: perception.launch
src/perception_bringup/rviz/: perception.rviz
src/velodyne_detection/: CMakeLists.txt  README.md  package.xml
src/velodyne_detection/launch/: velodyne_detection.launch
src/velodyne_detection/scripts/: velodyne_bev_detection.py
src/yolov12/: CMakeLists.txt  README.md  package.xml
src/yolov12/launch/: yolov12.launch
src/yolov12/scripts/: yolo_detect.py
src/yolov8/: CMakeLists.txt  README.md  new_best0710.yaml
src/yolov8/launch/: yolov8.launch
src/yolov8/scripts/: camera_yolo_detection.py
