<?xml version="1.0"?>
<package format="2">
  <name>livox_camera_fusion</name>
  <version>0.1.0</version>
  <description>Livox LiDAR + Camera YOLO sensor fusion node for object centroid detection.</description>

  <maintainer email="wkrud4431@gmail.com">JaGyeong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>detect_msgs</depend>
  <depend>dynamic_reconfigure</depend>
</package>
